--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,7 +11,7 @@ stages:
       buildContext: .
       tag: spring-boot-web
       pushRemote: true
-      registry: index.docker.io
+      registry: 127.0.0.1:34606
 - name: deploy
   steps:
   - applyYamlConfig:
