Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,7 +2,7 @@ stages:
 - name: compile
   steps:
   - runScriptConfig:
-      image: maven:v1
+      image: maven:3.5.0-jdk-8-alpine
       shellScript: mvn clean package
 - name: publish
   steps:
